nesc-frontend/src/test/resources/integration/programs/bad/bad27/I.nc
interface I<T>
{
   command void c(T arg);
   event void e(T arg);
}
